# sync-pre-commit-lock

./: .gitignore  .mise.toml  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .tool-versions  CONTRIBUTE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  tox.ini
.github/: CODE_OF_CONDUCT.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml  sync_python_deps.yml
scripts/: db_md.py
src/sync_pre_commit_lock/: __init__.py  _compat.py  config.py  db.py  install_hooks.py  pdm_plugin.py  poetry_plugin.py  pre_commit_config.py  shell.py  utils.py  uv.py
src/sync_pre_commit_lock/actions/: install_hooks.py  sync_hooks.py
tests/: conftest.py  test_config.py  test_db.py  test_pdm_sync_pre_commit_hook.py  test_pre_commit_config_file.py  test_shell_printer.py  test_utils.py  test_uv_plugin.py
tests/fixtures/pdm_project/: .pre-commit-config.yaml
tests/fixtures/poetry_project/: .pre-commit-config.yaml  pyproject.toml
tests/fixtures/sample_pre_commit_config/: pre-commit-config-document-separator.yaml  pre-commit-config-flow-multiline-deps.expected.yaml  pre-commit-config-flow-multiline-deps.yaml  pre-commit-config-only-deps.yaml  pre-commit-config-start-empty-lines.yaml  pre-commit-config-with-deps.yaml  pre-commit-config-with-local.yaml  pre-commit-config-with-one-liner-deps.expected.yaml  pre-commit-config-with-one-liner-deps.yaml  pre-commit-config-without-new-deps.expected.yaml  pre-commit-config-without-new-deps.yaml  pre-commit-config.yaml  sample-django-stubs.yaml
tests/fixtures/uv_project/: pyproject.toml
tests/test_actions/: test_install_hooks.py  test_pre_commit_config_file.py  test_sync_hooks.py
tests/test_pdm/: test_pdm_integration.py  test_pdm_plugin.py  test_pdm_sync_pre_commit_hook.py
tests/test_poetry/: test_poetry_plugin.py
