[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool.poetry]
name = "sample-poetry-project"
version = "0.1.0"
description = "Sample project"
authors = [ "Gabriel Dugny <git@dugny.me>" ]
readme = "README.md"
packages = [ { include = "sample_poetry_project" } ]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
